# LayoutVLM-Lab

./: .env.example  .gitignore  README.md  README_zh-CN.md  pyproject.toml  run.py
config/: paddle_layoutv2.yaml
docs/: config_reference.md  custom_layout.md
src/layoutvlm_lab/: __init__.py  config.py  pipeline.py
src/layoutvlm_lab/core/: __init__.py  registry.py
src/layoutvlm_lab/layout/: __init__.py  base.py  paddle_layout.py
src/layoutvlm_lab/utils/: __init__.py  image.py  paddle_layout_utils.py
src/layoutvlm_lab/vlm/: __init__.py  base.py  openai_vlm.py
src/layoutvlm_lab/vlm/prompts/: __init__.py  formula.py  ocr.py  table.py
